added file for Michelle's postcard and moved an asterisk to fit inside Jekyll if-formatting

--- a/_items/2019-10-09-0005.md
+++ b/_items/2019-10-09-0005.md
@@ -26,7 +26,7 @@ This piece of art was painted to continue a running joke between the Wheeler fam
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 What we see when we look at this painting is how cool it is, but to the contributor it is so much more! It is an original work created by his mom that represents an inside joke shared between the family as well as fandom culture. Gorn itself is a popular meme seen in Star Trek culture. In all of the original TV episodes, it appears only once, but it is one of the most recognized alien characters within the entire franchise. In fact, when looking at the original transcript, Gorn never speaks a word. Rather, only its actions are described in the script. Perhaps what makes it so contemporarily loved and adored is how terribly the Gorn costume looks. 
 
