format 'A History Harvest Perspective' header into 2019.10.08, 2019.10.10, and 2019.10.11

--- a/_items/2019-10-08-0005.md
+++ b/_items/2019-10-08-0005.md
@@ -19,22 +19,23 @@ tags: [ tradition,immigration,blanket,crochet,Mexican American ]
 #### The Importance of Community:
 
 Everyone wants to feel like they belong. Since early history, people have organized themselves into groups, and even today people will often go out of their way to ensure a sense of belonging. But, it’s not always easy to accomplish this. How would one manage to form a community if, for example, they were in a foreign place? Immigrants often find themselves having to find or create communities based on common ties, such as religion or family. 
+
 We often treasure the gifts we receive from family and friends, but why? Objects often have deep ties to the context from which they were created. They can serve as a reminder of the people, cultures and communities that they represent. 
 
-#### Immigrants and Building Community:
+>One of the things that I miss about her is that I would go to her house every Sunday and we would just have coffee and eat bread and just talk about life. And this is what she—a lot of the time—she would be doing at the table and we’d be sitting there. **If I could bring that table, I would’ve brought that table**. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
+
+## A History Harvest Perspective
+### Immigrants and Building Community:
 
 The blankets were made for Rebecca Neri by her grandmother, who immigrated to the U.S. from Mexico. Having made similar pairs of blankets for her cousins, Rebecca’s grandmother made a pair for her in different colors. In her account, she attributes part of her love for the blanket to the work her grandmother put into it. Among many immigrant families, elders play an important role in their families’ lives. Everyone has a story and in a way for some, case studies were done on numerous immigrant elders, four of whom were from Mexico. The study denotes that immigrant elders often have active roles as caregivers towards their kin. This contrasts with American elders, who often play more passive roles, enjoying the company of their families but acting as care recipients rather than caregivers. Furthermore, Rebecca notes that her grandmother’s house was a source of community for her family, as she and her relatives would often meet there. The trend of immigrant elders having active roles in their kin’s lives reflects the work Rebecca’s grandmother put into making the blankets, and how her house was a source of community for a large part of the extended family. 
 
 Additionally, the idea of community is emphasized in a [series of interviews with Latino Hoosiers](http://purl.dlib.indiana.edu/iudl/findingaids/cshm/ohrc104), who emphasize belonging and what immigrants do to establish it. When first arriving in the U.S., Rebecca’s grandmother needed to establish a community in some way and was able to do so through connecting her family. Within the interviews, Latino Hoosier immigrants share similar goals, with many discussing their lives, immigration and involvement in Latino communities. While not all involve themselves with family, the interviews give insight into another major form of community—churches. Through religion, many immigrants are able to connect to each other and establish tight-knit communities through shared personal beliefs.  
 
-#### Building a Stronger Bond
+### Building a Stronger Bond
 
 As for some, it maybe be difficult for some to grasp moving to a totally different country.  This maybe a shock for some, but for others, it is just a way to find sanctuary.  That may be leaving loved ones, friends, a job and much more.  Everything has changed for migrants looking to come from Mexico to the US.  Early on, it wasn't about worrying to stop crime or drug smuggling, people came as they pleased.  For families now, it is difficult to get [across the boarder]  (https://www.youtube.com/watch?v=rLZB_EkgFBQ) without the worry of deportation or getting seperated from other family members. The journey that now happens is totally different from the 1960s or 1970s.  As we look at Nana's Cobija, it shows that success story of making it to the US, along with a sense of family.  As for Rebecca, it is a reminder to what we all hope for and care about so much, family.
 
 To learn more on hispanic and latino culture, check out [IU's La Casa] (https://lacasa.indiana.edu/) for events, services and more!
 
-## From the Contributor
-
->One of the things that I miss about her is that I would go to her house every Sunday and we would just have coffee and eat bread and just talk about life. And this is what she—a lot of the time—she would be doing at the table and we’d be sitting there. **If I could bring that table, I would’ve brought that table**. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ![This was the method used.](/H301HistoryHarvest/assets/images/networkanalysis2.PNG)!
