--- a/_items/2019-10-10-0007.md
+++ b/_items/2019-10-10-0007.md
@@ -18,11 +18,12 @@ tags: [ Cooking, Recipes, Family History, Food, Island cooking Cooking, Puerto R
 
 This object is a family cookbook that has a collection of family recipes from both local Puerto Rican and filipino communities. The cook book includes: cooking recipes, techniques, and historical information from these communities that have made Hawaii their home. This cookbook serves as a piece of history to its owner. It sheds a light onto the life in Hawaii that they did not live themselves. Since being from the “Mainland” meant being far from this culture, Being able to be in possession of the book allows for a familiar connection that otherwise would be hard to ascertain
 
-#### Recipes That Go a Long Way
+## A History Harvest Perspective
+### Recipes That Go a Long Way
 
 When thinking of different groups of people in society, [Puerto Ricans and Hawaiians](https://centropr.hunter.cuny.edu/centrovoices/chronicles/how-first-puerto-ricans-arrived-hawai%E2%80%99i-island) don't necessarily come to mind. In 1899, a sugar shortage came about once hurricanes wrecked havoc through Puerto Rico. Plantation workers were then sent to Hawaii and arrived in 1901 and have been going strong since. Now with over 40,000 Puerto Ricans spread across four different islands, these two great cultures have merged and created some [icon food](https://www.youtube.com/watch?v=6qnI7QTjwz4) around the island. Great dishes have been merged together and much has been created since coming to the island. This cookbook has all of that and more, especially when wanting some of that great cultural flavor.
 
-#### A Taste from Everyone
+### A Taste from Everyone
 
 The Caribbean is an area of mixed islands that bring a lot of different rich backgrounds all to the caribbean. From French to Spanish to English, the Caribbean area has been effected in more ways than one. From that, food is a big culture of the caribbean. Each country or island has their own flare and they do it just as they did when they were a colony. While looking at *Cookbooks and Caribbean cultural identity : an English-language hors d'oeuvre* you learn about 119 cookbooks into one, each having a part in caribbean culture and food. You can look at Cuban culture, while making a Jamaican dish. All is in the book which is curated from 1890-1997.
 
