--- a/_items/2019-10-11-0002.md
+++ b/_items/2019-10-11-0002.md
@@ -20,11 +20,14 @@ Kimonos like these date back historic times in East Asia for both men and women.
 
 >My great grandfather was in World War II. He enlisted in 1943, went to Japan, and brought this back with him. When I was 16, I went on a student trip to Japan and he gave me this beautiful Kimono. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
+## Kimonos and Culture
+### A History Harvest Perspective
+
 Kimonos have been a huge part of Japanese culture and here is a little secret about kimonos you may have not known about.
 
 https://www.youtube.com/watch?v=M7Cerw3vBCc
 
-Many Kimonos used for this celebration can cost upwards of ¥1,000,000 (roughly $9,200 USD), and lead women to have long, exhausting days of preparation for their "Coming of Age" Celebration, a wedding, funeral, etc. One example of this is shown in a scene from Madame Butterfly preformed at Indiana University. In it, you can see a women dawning a more casual Kimono with her hair and makeup complete, while a man stands in a Western suit.
+Many Kimonos used for this celebration can cost upwards of ¥1,000,000 (roughly $9,200 USD), and lead women to have long, exhausting days of preparation for their "Coming of Age" Celebration, a wedding, funeral, etc. One example of this is shown in a scene from Madame Butterfly preformed at Indiana University. In it, you can see a women donning a more casual Kimono with her hair and makeup complete, while a man stands in a Western suit.
 
 Kimonos are a certain identity for Japan that reaches other continents world-wide.  As these aren't common as before, they are still very proudly worn in different scenarios.  When reading **Kimono and the Construction of Gendered and Cultural Identities** it tells not only about the history but more on how kimonos play into the culture of Japan.  To learn more on Japanese culture, Indiana University Southeast has a [Japan Center](https://www.ius.edu/japan-center/index.html) for students, staff, faculty, and the public to learn more on the Japanese culture.
 
