format 'A History Harvest Perspective' header into 2019.10.01 and 2019.10.03

--- a/_items/2019-10-01-0015.md
+++ b/_items/2019-10-01-0015.md
@@ -19,7 +19,7 @@ tags: [ clay, mud, art in education, Touch--Psychological Aspects, Play,  learni
 
 The Dorodango collection is a collection of mudballs that were collected by the object’s owner over the course of the past 25 years. He teaches the process of creating dorodango as an educational tool in his art classes to help his students learn how nature can be used to create art, to teach them patience, and as a means of relief and comfort. 
 
-<p class="blockquote">This is a collection of mudballs built over 25 years of teaching children that they can manipulate materials in order to make art and bring them comfort. {% if page.itemcontributor %}<br><strong>—{{ page.itemcontributor }}</strong>{% endif %}</p>
+>This is a collection of mudballs built over 25 years of teaching children that they can manipulate materials in order to make art and bring them comfort. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Play as Educational Development
 ### A History Harvest Perspective
