--- a/_items/2019-10-03-0001.md
+++ b/_items/2019-10-03-0001.md
@@ -20,6 +20,7 @@ The hat came from a bar in New York City called "21", which opened its doors in 
 >So I got this hat in New York City] at a restaurant called the Twenty-One Club. It was a Prohibition era bar, and they got shut down and then had to move around New York City a bunch of times. Eventually they relocated, and now if you go there on your twenty-first birthday, they give you a hat. So it wasn’t my twenty-first birthday, but I did manage to get a hat from somebody. Now me and my sister both have them, and it’s a very sentimental thing. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Prohibition Era
+### A History Harvest Perspective
 
 Turing 21 now in here in the U.S. is a large celebration. Young adults have the ability to spend a night out with friends, partaking in alcohlic drinks, all without the fear of having to partake in secret. A century ago, however, that was not the case.
 
