--- a/_items/2019-10-03-0005.md
+++ b/_items/2019-10-03-0005.md
@@ -19,20 +19,21 @@ tags: [  ]
 
 On the surface, other than a piece of artwork, this tattoo just looks like a hand holding a snake; however, the meaning of it, and the *1.3* run deeper. The *1.3* represents a line in Yoga Sutra that says: "Then the seer becomes established in its true nature." [^1] The snake and the woman's hand are representitive of not only Kate's love for snakes, but also her view about them and their ability to shed their skin and, as Kate says, they are "a symbol of transformation... I like that they can show that humans are often going through a lot."
 
-## Tattoo Culture
+>I have multiple tattoos on one arm that reflect my identification of a community of people who seek comfort in the esoteric. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
+
+
+## A History Harvest Perspective
+### Tattoo Culture
 
 Tattoos have become more popular over the past few years, and roughly 38% of people have at least one tattoo before they reach 30 years-old. [^2]
 
 This growing trend has led to a growing industry where not only clinets can express their creative freedom and connections to a band, idea, animal, cultire, etc., but also the artists that physically tattoo it on the body. If you would like to read more on the study of tattoo culture, more information can be found [here](https://www.smithsonianmag.com/arts-culture/looking-at-the-worlds-tattoos-60545660/).
 
-## Yoga Culture
+### Yoga Culture
 
 Roughly 20.4 million Aerican's practice yoga (roughly 9%). [^3] Here in America, the most common reasons for one to start practicing yoga were to improve not only flexibility, but also their conditioning, stress relief, and improve their health overall. If you want to read more about the benefits of yoga, more information can be found [here](https://www.yogajournal.com/lifestyle/count-yoga-38-ways-yoga-keeps-fit).
-
-## From the Contributor
  
->I have multiple tattoos on one arm that reflect my identification of a community of people who seek comfort in the esoteric. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
-
+ 
 [^1]: Study And Download Yoga Online, yogainternational.com/article/view/yoga-sutra-1-3-translation-and-commentary.
 [^2]: Newman, Meredith. “Report: More Young People Have Tattoos and Piercings than Ever Before.” USA Today, Gannett Satellite Information Network, 20 Sept. 2017, www.usatoday.com/story/news/nation-now/2017/09/20/young-people-tattoos-and-piercings-report/686360001/.
 [^3]: “HOW Many Americans Practice Yoga?” HuffPost, HuffPost, 7 Dec. 2012, www.huffpost.com/entry/american-yoga_n_2251360.
