--- a/_items/2019-10-03-0006.md
+++ b/_items/2019-10-03-0006.md
@@ -21,6 +21,7 @@ Reusable waterbottles and thermoses have become a growing trend and means of sel
 >I'm almost never without this object.  It's black. It was once matte black, but it's now very beat up. You can see the silver. It's a silver thermos that was powder-coated or whatever matte black and is now dinged up, scraped up, has a sippy lid on top, has a couple of stickers on it. One sticker's so faded you can't see what it once was, another sticker is not so faded.  It says a fair bit about the places to which, with which I identify. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Customization Culture in the Modern Day
+### A History Harvest Perspective
 
 With options like steel, glass, and plastic, reusable waterbottles and thermoses have a seemingly infinite number of ways to be customized to express how one wants to be represented. One of the ways that people choose to show this is customization is by stickers. By phiscally being able to add more to an object, stickers allow one to show places they have been (such as with this thermos), communities they are a part of (such as IU with some schools having stickers), or achievements (such as the "26.2" sticker representing one running a marathon) along with many other things. 
 
