--- a/_items/2019-10-03-0008.md
+++ b/_items/2019-10-03-0008.md
@@ -20,7 +20,8 @@ This is a medical book from the Lilly Library that contains 130 books of medical
 
 The other books listed in this collection contain information on a variety of topics that include: ancient efforts on anatomy, physiology, geology, and important breakthroughs in both medicine and how the world works.
 
-## The Donated Collection
+## A Donation of 20,000 Books
+### A History Harvest Perspective
 
 Josiah Kirby Lilly Jr. and his family donated a large selection of medical importance to the Lilly Library between 1954-1957. The collection consisted of roughly 20,000 books and 17,000 manuscripts that had impacts on the evolution of medicine and science. This donation from the Lilly Family inspired then-IU President Herman B Wells to construct the Lilly Library which opened its doors in October of 1960.[^2]
 
