--- a/_items/2019-10-03-0009.md
+++ b/_items/2019-10-03-0009.md
@@ -16,7 +16,14 @@ tags: [  ]
 ---
 ## About This Object
 
-This purse was created by Kathy herself from a repurposed pillow sham she found at a Goodwill store. It has a quilted texture, patchwork around the sides, and hand-sewn buttons. This one is not the first that she has made from repurposing the materials she finds. Through these projects that use repurposed material, artist of all skill levels, backgrounds, and artforms have the chance to express their creativity while also lending a hand to helping the enviornment. Numerous studies by the Environmental Protection Agency have stressed the importance of reusing the repurposing materials. [^1] They also give a list of reasons to why one should repurpose their materials instead of throwing them away. Some of the reasons include saving energy, saving money, sustanablitiy, and allowing products to be used to their full extent.[^2] 
+This purse was created by Kathy herself from a repurposed pillow sham she found at a Goodwill store. It has a quilted texture, patchwork around the sides, and hand-sewn buttons.
+
+>I enjoy making things creatively and I belong to an extension homemakers club here in Bloomington. And we do a lot of handcrafts. And I've made several of these purses and I've taught other people how to make them, probably 20 people or so. Domestic Engineers. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
+
+## Creating Objects from Repurposed Materials
+### A History Harvest Perspective
+
+This one is not the first that she has made from repurposing the materials she finds. Through these projects that use repurposed material, artist of all skill levels, backgrounds, and artforms have the chance to express their creativity while also lending a hand to helping the enviornment. Numerous studies by the Environmental Protection Agency have stressed the importance of reusing the repurposing materials. [^1] They also give a list of reasons to why one should repurpose their materials instead of throwing them away. Some of the reasons include saving energy, saving money, sustanablitiy, and allowing products to be used to their full extent.[^2] 
 
 Indiana Univeristy also has a handful of books in its collection about creating objects out of repurposed materials. One of those books, "Re-bound," can be found [here](https://iucat.iu.edu/catalog/9094228). If you want to try your hand at making one yourself, Karen McLennan give a step-by-step tutorial here:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nUnYUFs_KYY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -24,9 +31,6 @@ Indiana Univeristy also has a handful of books in its collection about creating 
 
 Through her craft, Kathy also teaches others the art of repurposing materials. She does this through her one of her groups here in Monroe County called "Domestic Engineers." There are roughly 10-15 groups like this here in the Bloomington and Monroe County area and are open to anyone interested in hand-created arts. If you are interested in finding out more about what these clubs do, you can read about them [here](https://www.hoosiertimes.com/herald_times_online/life/at_home/mceha-clubs-share-their-passion-for-the-home/article_89aef3a6-35f9-5d8b-a662-b05eccf305c7.html). 
 
-## From the Contributor
-
->I enjoy making things creatively and I belong to an extension homemakers club here in Bloomington. And we do a lot of handcrafts. And I've made several of these purses and I've taught other people how to make them, probably 20 people or so. Domestic Engineers. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 [^1]: “Indiana University.” IUCAT, iucat.iu.edu/catalog/1386319.
 [^2]: “Reducing and Reusing Basics.” EPA, Environmental Protection Agency, 25 Nov. 2019, www.epa.gov/recycle/reducing-and-reusing-basics.
