--- a/_items/2019-10-03-0010.md
+++ b/_items/2019-10-03-0010.md
@@ -20,7 +20,8 @@ Home textiles remain largely out of the public’s eye as 'historical items.' Th
 
 However, they're still an important part of our history. People come together through quilting, embroidering, and knitting circles. People create something that is more than themselves, whether by making big buildings or small handmade baby blankets. Although most material cultures are seen through the items themselves (think about any material item recently made!), textiles' long history and lack of preservation through time makes us look to the contexts in which they were made to understand them. Through looking at how this Pano made it to Bloomington, Indiana, we can begin to understand the importance of handmade textiles and how they're woven into the fabric of our communities.
 
-## What is Pano?
+## Pano, a Mesmerizing Handmade Textile
+### A History Harvest Perspective
 
 This item originated in Kyrgyzstan in Central Asia. It's a handmade textile with a gray border and colorful motifs embroidered onto a black background. It looks as if the border encapsulates a piece of cut fabric, as the pattern toward the end of the black background is uneven in places and cut off. Textiles like this Pano can be used as wall hangings, blankets, and floor coverings (<em>Nomadic Felts</em>); however, the Pano's specific use is as a wall hanging according to contributor Tattu.
 
