--- a/_items/2019-10-03-0011.md
+++ b/_items/2019-10-03-0011.md
@@ -16,7 +16,10 @@ tags: [  ]
 ---
 ## About This Object
 
-This Giro bike helmet was given to the contributor from her husband. Even before receiving the helmet, the contributor and their significat other both shared a love for the outdoors and Bloomington's natural beauty. They both fequent the B-Line trail, hiking trails, and the tradition that Indiana University holds every May: The Little 500. 
+This Giro bike helmet was given to the contributor from her husband. Even before receiving the helmet, the contributor and their significat other both shared a love for the outdoors and Bloomington's natural beauty. They both fequent the B-Line trail, hiking trails, and the tradition that Indiana University holds every May: The Little 500.
+
+## The Little 500
+### A History Harvest Perspective
 
 The Little 500 is a tradition that is held every year at Bill Armstrong Staduim. It is a bike race that consists of riding around the gravel track at the staduim (100 laps for the women's race, 200 for the men's). The race is a fundraiser for scholarships at Indiana University. A very breif video showing the week of Little 500 is shown below:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tUdN4idSDxc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
