--- a/_items/2019-10-03-0018.md
+++ b/_items/2019-10-03-0018.md
@@ -14,7 +14,8 @@ categories: [ Individual Expression ]
 tags: [ material culture, clothing, feet, shoes, skateboarding, Vans, Lucky, Consumer Culture, Sneakers, Fashion Merchandising]
 ---
 
-## The shoes that changed the world forever
+## The Shoes That Changed the World Forever
+### A History Harvest Perspective
 
 These multi-colored Vans are not the usual sneaker you see, but they have been around for over 50 years.  Starting in Anaheim, California, the [Van Doren](https://www.vans.com/history.html#1978) brothers opened up their first Vans store with the impression of making some regular shoes, but were eaten up by the [skateboarding culture](https://www.youtube.com/watch?v=xL42dN4oO9E) of California.  The Van’s “Era,” the shoes archived, were the first official now-a-day Vans created by the brothers. These shoes have a lot of character but something that makes them unique is that the name is rarely seen on the shoe, except the bottom of the heel and sometimes on the tongue.  These shoes aren’t like Nike or Adidas who have personalized logos. Vans are all different and if something that may show signs of branding, is the white straight line on the sides of the shoe.
 
