--- a/_items/2019-10-03-0021.md
+++ b/_items/2019-10-03-0021.md
@@ -16,12 +16,13 @@ tags: [Music, Creativity, Straight No Chaser]
 ---
 ## About This Object
 
-This Prato plate is something you may look at and think, is this connected to Samba dancing?  Well, this plate ties Samba dancing altogether.  [Samba dancing (https://dance.lovetoknow.com/Samba_Dance_History)] originates from the 19th Century in Brazil, with have its move and music beats coming from African slave dances.  These moves flow and go to the rythym of the music.  This plate has the ethos of what samba brings out in dancers.  This plate resembles the dancing flows and beats that come with samba music.
+This Prato plate is something you may look at and think, is this connected to Samba dancing?  Well, this plate ties Samba dancing altogether. [Samba dancing](https://dance.lovetoknow.com/Samba_Dance_History) originates from the 19th Century in Brazil, with have its move and music beats coming from African slave dances.  These moves flow and go to the rythym of the music.  This plate has the ethos of what samba brings out in dancers.  This plate resembles the dancing flows and beats that come with samba music.
 
 
 ## Samba for everyone
+### A History Harvest Perspective
 
-As samba dancing may seem daunghting at first, it is very easy to learn.  It is a dance that brings out everyone, even IU's very own, [*Straight No Chaser* (http://webapp1.dlib.indiana.edu/archivesphotos/results/item.do?itemId=P0088071)].  This group always finds a way to incorporate this dance style in their set when they return to IU.  Samba dancing is easy for everyone and anyone can learn.  Watch this Youtube tutorial below to learn more on the dance style.
+As samba dancing may seem daunghting at first, it is very easy to learn.  It is a dance that brings out everyone, even IU's very own, [*Straight No Chaser*](http://webapp1.dlib.indiana.edu/archivesphotos/results/item.do?itemId=P0088071).  This group always finds a way to incorporate this dance style in their set when they return to IU.  Samba dancing is easy for everyone and anyone can learn.  Watch this Youtube tutorial below to learn more on the dance style.
 
 https://www.youtube.com/watch?v=rMsRzvei_AI
 
