--- a/_items/2019-10-03-0012.md
+++ b/_items/2019-10-03-0012.md
@@ -21,6 +21,7 @@ AJ perceives this lipstick as something that added value to sense of self-worth 
 >Lipstick is how I make myself known to the world. I love matching lipstick to my outfits and accessories and highlighting my beautiful lips that have been passed down in my family. I am black and Mexican, and full lips have been a marker in both communities and I love showing the world how proud I am of mine, as well as showing pride in my communities. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Makeup as a form of Empowerment
+### A History Harvest Perspective
 
 Each face is beautiful because it has its own individual personality and depth. Grooming and beauty are essentially a fashion statement and the growing cosmetic products industry is evidence of this trend. Empowerment stems from gratifying one’s sense of self-worth and this could be channeled through any means like education or sports or beauty. Empowerment is an individual perception. People of color have embraced their race and physical identities with pride, one example is found through [Ginetta Candelario](www.jstor.org/stable/40338439), when she tells that black women cared for their hair and beauty, not to look “white”, but to look beautiful. It is this attitude that has been adopted by AJ that symbolizes her individual empowerment and breaking free of any beauty norms as defined by the majority of the society.
 
